feat: load questions from json file

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <h1>Exam App</h1>
 <div id="setup">
 <h2>Load Questions</h2>
-<p>Paste JSON of questions:</p>
-<textarea id="questionInput" rows="10" cols="50"></textarea><br>
+<p>Select JSON file of questions:</p>
+<input type="file" id="fileInput" accept=".json"><br>
 <button id="startBtn">Start Exam</button>
 </div>
 <div id="exam" style="display:none;">
